[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["barsa2000 <barsanti-filippo2@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner="0.3.0"
aoc-runner-derive="0.3.0"
boolinator = "2.4.0"
rust-crypto = "0.2.36"